k8s/pedido-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pedido-service
  labels:
    app: pedido-service
spec:
  selector:
    app: pedido-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
