k8s/pedido-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedido-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pedido.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pedido-service
                port:
                  number: 8000
